fix options width on mobile

--- a/pages/css/options.css
+++ b/pages/css/options.css
@@ -257,12 +257,14 @@ button.mobile {
   padding: 5px;
   border-radius: 5px;
   border: 1px solid white;
-  width: 340px;
+  width: 90vw;
+  max-width: 340px;
   display: flex;
   flex-direction: column;
 }
 .category.wide {
   width: 450px;
+  max-width: 90vw;
 }
 
 .block {
